[project]
name = "pynject"
version = "0.0.1"
requires-python = ">=3.9"

[tool.poetry]
name = "pynject"
version = "0.0.1"
description = ""
authors = ["Nodiel <nodiel.clavijo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
flake8 = "^7.1.1"
black = "^24.8.0"
mypy = "^1.11.2"

[tool.mypy]
strict = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
